--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="home.html" class="mr-5 hover:text-gray-900">COMMERCIAL PROPERTIES</a>
             <a href="home.html" class="mr-5 hover:text-gray-900">CONTACT </a>
           </nav>
-          <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">  <a href="/home.html">Email </a>
+          <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">  <a href="home.html">Email </a>
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
               <path d="M5 12h14M12 5l7 7-7 7"></path>
             </svg>
@@ -39,7 +39,7 @@
             <p class="mb-8 leading-relaxed">contact - Mr Avinash  Verma on Mobile- 9839539445 </p>
             <div class="flex justify-center">
               <button  class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg"><a href="home.html">Contact</a></button>
-              <button href="home.html" class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg"><a href="/home.html">Favourite</a></button>
+              <button href="home.html" class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg"><a href="home.html">Favourite</a></button>
             </div>
           </div>
           <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
